--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 
 * Don't rely on NULL vs. non-NULL to free values in PopFrame.
- - Release return value in RETURN_INSTR when unwinding stack.
+ - Release locals properly in return and tail call when unwinding stack.
  - Avoid redundant retain/release of func in ReplaceFrame.
 
 
