Use more concise output for running tests.
Print '.' or 'F' when running the test. Only print the names of tests that
fail.

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,9 +2,14 @@
 * Clean up fble test framework
  - Define Test function that takes CharLit and start using it.
  - Use AssertEquals for more of the tests.
- - Add less verbose Test runner, that behaves like junit.
+ - Print out total tests passed, failed, and run in RunTest.
  - Separate Test tests out into separate module and properly test the test
    infra.
+
+* Figure out why we need an extra print in RunTest.
+ Does the program end before we have a chance to put all the output?
+
+* Figure out memory leak when 3 Bool Or tests were set to failing.
 
 * Add more Sat tests.
 
