--- a/langs/fble.style.txt
+++ b/langs/fble.style.txt
@@ -8,6 +8,7 @@ canonical one.
 * Top level declarations are capitalized. For example: And, DrawBox.
 * Argument names are lower case. For example: (Foo@ x) { ... }
 * Struct and union fields should be lower case.
+* Module names are capitialized. For example: /Bool%, /GameOfLife%.
 
 * Parenthesized or braced expressions can be split across multiple lines. If so,
   indent by 2 spaces. Put the close brace on its own line and the end aligned
@@ -76,4 +77,6 @@ canonical one.
   But then we should prefer the module /Character% over /Char%? And
   /Application% over /App%? Isn't that confusing? Wouldn't you like Str@ to be
   defined in /Str%?
+
+* Use _ as the name of unused variables.
 
