Define Show@ type and use that instead of Print in AssertEquals.
More uses still need to be moved over from 'Print' to 'Show'.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 * Create a Sat benchmark
- - Implement an IntP parser (or IntS or Int?)
+ - Implement support for IntP literals.
+ - Implement an IntP parser (or IntS or Int?).
  - Implement dimacs cnf parser.
 
 * Clean up fble test framework
