--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,9 @@
 * Clean up fble library
+ - Test /Maybe/Eq%.Eq
+ - Test /List/Eq%.Eq
+ - Implement and test Eq and Show for Str@.
  - Test /Bool/Show%.Show
  - Test /Maybe/Show%.Show
- - Test /Maybe/Eq%.Eq
  - Separate modules as appropriate to reduce false dependencies.
  - Document all functions.
  - Add tests for full code coverage of all functions.
