--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
 * Clean up fble library
  - Test /Maybe/Eq%.Eq
- - Implement and test Eq and Show for Str@.
- - Test /Bool/Show%.Show
+ - Test Eq and Show for Str@.
  - Test /Maybe/Show%.Show
  - Separate modules as appropriate to reduce false dependencies.
  - Document all functions.
  - Add tests for full code coverage of all functions.
+ - Rename Str to String? Or to S?
 
 * Create a Sat benchmark
  - Implement support for IntP literals.
