Added a sat benchmark.
It only takes 4 seconds though, so we'll want to switch to a harder problem.

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,9 +6,8 @@
  - Rename Str to String? Or to S?
 
 * Create a Sat benchmark
- - Implement support for IntP literals.
- - Implement an IntP parser (or IntS or Int?).
  - Implement dimacs cnf parser.
+ - Pick a much harder problem to solve.
 
 * Clean up fble test framework
  - Rename 'Print' to 'Show', which better describes what the function does.
