Print number of tests passed in test report.
Change /List/Length% to return Int@ instead of IntS@, which is more flexible
in how it can be used.

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,8 +7,8 @@
  - Only support Int@ officially, not IntP@ and IntS@ too?
 
 * Sat solver
- - Add support for unit propagation.
  - Add support for pure literal propagation.
+   Wants better fble library support for sets?
  - Implement dimacs cnf parser.
 
 * Clean up fble test framework
