Export Insert directly from /Map%.
Rather than through the Map@ interface. In preparation for removing the Map@
interface.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,6 @@
 * Clean up Map and Set library
- - Switch over from Data@ to Structure@
- - Add helper functions and literals to make it easier to define instances of
-   Structured@
  - Redefine Map@ type.
- - Add implementations of Structured@ for Int and String.
+ - Add implementations of Structured@ for Int, String, and other common types.
 
 * Proof of concept fblf
  - Implement N bit addition, run on evaluator and compile via llvm to c code
